--- a/task1/makefile
+++ b/task1/makefile
@@ -1,6 +1,6 @@
 main:main.cpp
-	g++ -O3 -std=c++14 main.cpp -o main
+	g++ -O3 -std=c++14 main.cpp -o main -fopenmp
 
 
 clean:
-	rm -f main output.txt
+	rm -f main output.txt output_non_parallel.txt
